force-app/main/default/objects/Employee__c/fields/Can_Expense_Items__c.field-meta.xml
<CustomField>
    <fullName>Can_Expense_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Expense Items?</label>
    <type>Checkbox</type>
</CustomField>