force-app/main/default/objects/Employee__c/fields/Number_of_Expense_Reports__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expense_Reports__c</fullName>
    <label>Number of Expense Reports</label>
    <summaryForeignKey>Expense_Report__c.Employee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>