force-app/main/default/objects/Employee__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <summarizedField>Expense_Report__c.Total_Amount_of_Expenses__c</summarizedField>
    <summaryForeignKey>Expense_Report__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>